--- a/my-vue-app/index.html
+++ b/my-vue-app/index.html
@@ -11,3 +11,16 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+<style>
+html, body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: visible!important;
+  overflow-x: hidden!important;
+}
+#app {
+  width: 100%;
+  height: 100%;
+}
+</style>
